--- a/Front/WebSeries/src/app/components/paises/list-paises/paises.component.html
+++ b/Front/WebSeries/src/app/components/paises/list-paises/paises.component.html
@@ -1,1 +1,36 @@
-<p>paises works!</p>
+<div class="container">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h2 class="mb-0">Gestión de Paises</h2>
+      <div> 
+        
+      </div>
+      <button class="btn btn-primary" (click)="openPaisCreate()">Crear Pais</button>
+    </div>
+  
+    <div *ngIf="isLoading()">
+      <p>Cargando datos...</p>
+    </div>
+  
+    <table *ngIf="!isLoading() && paises().length > 0" class="table table-striped">
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let pais of paises()">
+          <td>{{ pais.nombre }}</td>
+          <td>
+            <button class="btn btn-primary btn-sm" (click)="openPaisEdit(pais.paisId)">Editar</button>
+            <button class="btn btn-danger btn-sm ms-2" (click)="eliminarPais(pais.paisId)">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  
+    <div *ngIf="!isLoading() && paises().length === 0">
+      <p>No hay paises disponibles.</p>
+    </div>
+  </div>
+  
