--- a/Front/WebSeries/src/app/components/actores/create-actor/create-actor.component.html
+++ b/Front/WebSeries/src/app/components/actores/create-actor/create-actor.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="card mb-4">
         <div class="card-header">
-            <h3>Editar Actor</h3>
+            <h3>Crear Actor</h3>
         </div>
         <div class="card-body">
 
