--- a/Front/WebSeries/src/app/components/actores/list-actores/actores.component.html
+++ b/Front/WebSeries/src/app/components/actores/list-actores/actores.component.html
@@ -4,7 +4,7 @@
     <div> 
       
     </div>
-    <button class="btn btn-primary" (click)="openActorCreate()">Crear Actor</button>
+    <button class="btn btn-primary" (click)="openActorCreate()">Nuevo actor</button>
   </div>
 
   <div *ngIf="isLoading()">
