--- a/Front/WebSeries/src/app/components/generos/list-generos/generos.component.html
+++ b/Front/WebSeries/src/app/components/generos/list-generos/generos.component.html
@@ -4,7 +4,7 @@
       <div> 
         
       </div>
-      <button class="btn btn-primary" (click)="openGeneroCreate()">Crear Genero</button>
+      <button class="btn btn-primary" (click)="openGeneroCreate()">Nuevo genero</button>
     </div>
   
     <div *ngIf="isLoading()">
