--- a/Front/WebSeries/src/app/components/paises/list-paises/paises.component.html
+++ b/Front/WebSeries/src/app/components/paises/list-paises/paises.component.html
@@ -4,7 +4,7 @@
       <div> 
         
       </div>
-      <button class="btn btn-primary" (click)="openPaisCreate()">Crear Pais</button>
+      <button class="btn btn-primary" (click)="openPaisCreate()">Nuevo pais</button>
     </div>
   
     <div *ngIf="isLoading()">
