--- a/Front/WebSeries/src/app/components/peliculas/list-peliculas/peliculas.component.html
+++ b/Front/WebSeries/src/app/components/peliculas/list-peliculas/peliculas.component.html
@@ -4,7 +4,7 @@
       <div> 
         
       </div>
-      <button class="btn btn-primary" (click)="openPeliculaCreate()">Crear Pelicula</button>
+      <button class="btn btn-primary" (click)="openPeliculaCreate()">Nueva pelicula</button>
     </div>
   
     <div *ngIf="isLoading()">
