--- a/Front/WebSeries/src/app/components/directores/list-directores/directores.component.html
+++ b/Front/WebSeries/src/app/components/directores/list-directores/directores.component.html
@@ -4,7 +4,7 @@
       <div> 
         
       </div>
-      <button class="btn btn-primary" (click)="openDirectorCreate()">Crear Director</button>
+      <button class="btn btn-primary" (click)="openDirectorCreate()">Nuevo director</button>
     </div>
   
     <div *ngIf="isLoading()">
