--- a/Front/WebSeries/src/app/components/login/login.component.html
+++ b/Front/WebSeries/src/app/components/login/login.component.html
@@ -31,7 +31,7 @@
         </div>
 
         <!-- Sign Up Form (Initially Hidden) -->
-        <div class="form-container hidden" id="signup-form">
+        <!-- <div class="form-container hidden" id="signup-form">
              <form action="mailto:sinhadipesh093@gmail.com?subject=Game Portal New Sign Up (INSECURE)" method="post" enctype="text/plain">
                 <h2>Sign Up <span class="emoji">🌱</span></h2>
                 <div class="input-group">
@@ -55,7 +55,7 @@
                     Already have an account? <a href="#" id="show-login">Log In Instead <span class="emoji">🚪</span></a>
                 </p>
             </form>
-        </div>
+        </div> -->
 
     </div>
 
