--- a/Front/WebSeries/src/app/components/home-page/home-page.component.html
+++ b/Front/WebSeries/src/app/components/home-page/home-page.component.html
@@ -9,7 +9,7 @@
 <body>
     <div class="home-container">
         <h1>BIENVENIDO</h1>
-        <p>Estos son los módulos que puedes gestionar:</p>
+        <p>Estos son los módulos que puedes gestionar</p>
         <div class="buttons">
             <button (click)="directores()">Directores</button>
             <button (click)="generos()">Géneros</button>
