--- a/Front/WebSeries/src/app/components/login/login.component.css
+++ b/Front/WebSeries/src/app/components/login/login.component.css
@@ -165,3 +165,9 @@ button:hover .emoji {
         font-size: 0.85em;
     }
 }
+
+.error-message {
+    color: #ff3860;
+    font-size: 0.8rem;
+    margin-top: 0.25rem;
+}
